styles/main.scss
@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:wght@500&display=swap');
:root {
	--primary-font: 'Josefin Sans', sans-serif;
	--secondary-font: 'Playfair Display', serif;
	--background-color: hsl(360, 6%, 90%);
}
body {
	background: var(--background-color);
	font-family: var(--primary-font);
	font-size: 1.0rem;
	overscroll-behavior: none;
}
main {
	margin: 0 auto;
	padding: 2.0rem;
	width: clamp(83%, 80vw, 100.0rem);
}
a {
	color: #3c9c9b;
}
header, article {
	border-bottom: 0.2rem solid black;
}
header {
	margin-bottom: 2.6rem;
}
h1 {
	font-size: 2.618rem;
	margin: 0 0 0.5rem;
}
.subtitle {
	font-size: 1.618rem;
	margin: 0 0 1.6rem;
	text-indent: 2.8rem;
}
article {
	line-height: 1.6;
	padding-bottom: 2.6rem;
}
.client-list {
	list-style: none;
	margin: 0;
	padding: 0;
	li {
		display: inline-block;
		margin: 0;
		padding: 0;
		white-space: nowrap;
		@media screen and (max-width: 42.5rem) {
			display: block;
			margin: 0 0 1.0rem;
			white-space: normal;
			&::after {
				display: none;
			}
		}
		&::after {
			content: ',';
		}
		&:last-child {
			&::after {
				display: none;
			}
		}
	}
}
h2 {
	font-size: 2.2rem;
}
h3 {
	font-size: 1.618rem;
}
.screenshots {
	display: grid; 
	grid-gap: 2.0rem;
	grid-template-columns: repeat(auto-fill, 22.0rem); 
	@media screen and (max-width: 40.0rem) {
		grid-template-columns: repeat(auto-fill, 100%); 
	}
	img {
		height: 100%;
		object-fit: cover;
		width: 100%;
	}
}
.ss {
	border: 0.5rem solid #4e6e60;
	border-radius: 1.0rem;
	.cfa & {
		border-color: #dd0031;
	}
	.drh & {
		border-color: #28445a;
	}
	.pnf & {
		border-color: #10a4d7;
	}
}

